--- a/Bai71/Bai71.vcxproj
+++ b/Bai71/Bai71.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{136a5d4a-2d74-4dea-9b16-79381822371d}</ProjectGuid>
     <RootNamespace>Bai71</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0071</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
