--- a/Bai91/Bai91.vcxproj
+++ b/Bai91/Bai91.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{9d2c0e9a-74a3-4b90-8676-8b186e9d066e}</ProjectGuid>
     <RootNamespace>Bai91</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0091</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
