--- a/Bai100/Bai100.vcxproj
+++ b/Bai100/Bai100.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{0f97807f-1737-41db-a16f-adcf92bce64c}</ProjectGuid>
     <RootNamespace>Bai100</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai0100</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
