--- a/Bai72/Bai72.vcxproj
+++ b/Bai72/Bai72.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{1bdbdeea-8e48-4992-873a-8a0d52ed766e}</ProjectGuid>
     <RootNamespace>Bai72</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0072</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
