--- a/Bai73/Bai73.vcxproj
+++ b/Bai73/Bai73.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{0ca2f16e-c6f6-4b84-88cf-66519d31b15e}</ProjectGuid>
     <RootNamespace>Bai73</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0073</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
