--- a/Bai74/Bai74.vcxproj
+++ b/Bai74/Bai74.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{04b1627b-f374-4b5f-961f-d444a5a67b2a}</ProjectGuid>
     <RootNamespace>Bai74</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0074</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
