--- a/Bai76/Bai76.vcxproj
+++ b/Bai76/Bai76.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{484d2bbb-23b8-4290-8e25-7b034ca2218f}</ProjectGuid>
     <RootNamespace>Bai76</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0076</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
