--- a/Bai78/Bai78.vcxproj
+++ b/Bai78/Bai78.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{3fc49f4c-c35c-4fb9-9f75-912128c233a1}</ProjectGuid>
     <RootNamespace>Bai78</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0078</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
