--- a/Bai79/Bai79.vcxproj
+++ b/Bai79/Bai79.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{d3631203-948c-4af4-89b4-08706fdb5c3e}</ProjectGuid>
     <RootNamespace>Bai79</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0079</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
