--- a/Bai80/Bai80.vcxproj
+++ b/Bai80/Bai80.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{47c155bd-04d5-4ba3-b42c-bf6428207b38}</ProjectGuid>
     <RootNamespace>Bai80</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0080</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
