--- a/Bai82/Bai82.vcxproj
+++ b/Bai82/Bai82.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{ed88e3ca-6007-4a75-8806-b9ac227f5072}</ProjectGuid>
     <RootNamespace>Bai82</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0082</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
