--- a/Bai83/Bai83.vcxproj
+++ b/Bai83/Bai83.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{91755151-6962-4a2d-9761-e606874aeeb0}</ProjectGuid>
     <RootNamespace>Bai83</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0083</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
