--- a/Bai84/Bai84.vcxproj
+++ b/Bai84/Bai84.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{e7cf750a-9750-462f-8c29-6d1a90b6e0ab}</ProjectGuid>
     <RootNamespace>Bai84</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0084</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
