--- a/Bai85/Bai85.vcxproj
+++ b/Bai85/Bai85.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{24ba38af-b5e6-4435-a568-05da6c830564}</ProjectGuid>
     <RootNamespace>Bai85</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0085</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
