--- a/Bai87/Bai87.vcxproj
+++ b/Bai87/Bai87.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{4002fd34-3bf9-45dc-aa83-c8eeaf786e17}</ProjectGuid>
     <RootNamespace>Bai87</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0087</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
