--- a/Bai88/Bai88.vcxproj
+++ b/Bai88/Bai88.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{5192950d-db17-4108-a5a2-ce387fdac833}</ProjectGuid>
     <RootNamespace>Bai88</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0088</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
