--- a/Bai89/Bai89.vcxproj
+++ b/Bai89/Bai89.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{ea660233-02c9-49bb-9f9c-bc00c796ee51}</ProjectGuid>
     <RootNamespace>Bai89</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0089</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
