--- a/Bai90/Bai90.vcxproj
+++ b/Bai90/Bai90.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{38fc5efc-8425-4343-a2f6-74fe9708a4a2}</ProjectGuid>
     <RootNamespace>Bai90</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0090</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
