--- a/Bai92/Bai92.vcxproj
+++ b/Bai92/Bai92.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{5237ddcd-5d1d-448c-a545-99247edcd362}</ProjectGuid>
     <RootNamespace>Bai92</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0092</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
