--- a/Bai93/Bai93.vcxproj
+++ b/Bai93/Bai93.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{d7cf9d6e-dcd7-4bff-a821-dd92be43928e}</ProjectGuid>
     <RootNamespace>Bai93</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0093</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
