--- a/Bai96/Bai96.vcxproj
+++ b/Bai96/Bai96.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{b626bd0c-6d22-4d37-9c93-b81d49b71598}</ProjectGuid>
     <RootNamespace>Bai96</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0096</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
