--- a/Bai97/Bai97.vcxproj
+++ b/Bai97/Bai97.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{46c834a6-c9c0-4ac4-a707-ef8d624604f1}</ProjectGuid>
     <RootNamespace>Bai97</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0097</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
