--- a/Bai98/Bai98.vcxproj
+++ b/Bai98/Bai98.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{321da4d9-b78b-4dff-9ada-3fbb4116a710}</ProjectGuid>
     <RootNamespace>Bai98</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0098</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
