--- a/Bai99/Bai99.vcxproj
+++ b/Bai99/Bai99.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{3d15ccf6-386f-4d8f-a332-5958abaebfba}</ProjectGuid>
     <RootNamespace>Bai99</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0099</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
