--- a/Bai108/Bai108.vcxproj
+++ b/Bai108/Bai108.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{45e879f1-d5e6-47a2-a7eb-3e5f91d90af2}</ProjectGuid>
     <RootNamespace>Bai108</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0108</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
