--- a/Bai101/Bai101.vcxproj
+++ b/Bai101/Bai101.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{a0d7f2ae-4da8-4072-b933-95acaa7f2183}</ProjectGuid>
     <RootNamespace>Bai101</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0101</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
