--- a/Bai103/Bai103.vcxproj
+++ b/Bai103/Bai103.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{85b402c3-5ebe-4aba-9f3f-5298970a3fa4}</ProjectGuid>
     <RootNamespace>Bai103</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0103</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
