--- a/Bai104/Bai104.vcxproj
+++ b/Bai104/Bai104.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{b0f4a692-b008-458b-b3e8-ae66aae757b1}</ProjectGuid>
     <RootNamespace>Bai104</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0104</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
