--- a/Bai106/Bai106.vcxproj
+++ b/Bai106/Bai106.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{aa6b1fdd-9a24-4130-86a3-c53528c61fdc}</ProjectGuid>
     <RootNamespace>Bai106</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0106</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
