--- a/Bai109/Bai109.vcxproj
+++ b/Bai109/Bai109.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{3c6aa172-4330-4df9-ae74-841d7e424371}</ProjectGuid>
     <RootNamespace>Bai109</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0109</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
