--- a/Bai110/Bai110.vcxproj
+++ b/Bai110/Bai110.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{82b2962b-1f22-405c-8e13-fe0a88b67fa5}</ProjectGuid>
     <RootNamespace>Bai110</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0110</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
