--- a/Bai112/Bai112.vcxproj
+++ b/Bai112/Bai112.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{61f5bb75-9fb5-4ecf-ba2a-3b4d7fdac35b}</ProjectGuid>
     <RootNamespace>Bai112</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0112</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
