--- a/Bai114/Bai114.vcxproj
+++ b/Bai114/Bai114.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{fba46e08-af64-4dfc-8a8a-5014655e167b}</ProjectGuid>
     <RootNamespace>Bai114</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0114</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
