--- a/Bai116/Bai116.vcxproj
+++ b/Bai116/Bai116.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{980d6db8-5d2b-47be-83d4-d1bdd2f8428b}</ProjectGuid>
     <RootNamespace>Bai116</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0116</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
