--- a/Bai117/Bai117.vcxproj
+++ b/Bai117/Bai117.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{dfe9e0dd-f0df-4d61-bdd0-bce647911fef}</ProjectGuid>
     <RootNamespace>Bai117</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0117</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
