--- a/Bai118/Bai118.vcxproj
+++ b/Bai118/Bai118.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{5944352e-3f28-4241-b16c-859322992006}</ProjectGuid>
     <RootNamespace>Bai118</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0118</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
