--- a/Bai119/Bai119.vcxproj
+++ b/Bai119/Bai119.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{973bc877-0cce-4cd9-9e8c-24a5930de49a}</ProjectGuid>
     <RootNamespace>Bai119</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0119</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
