--- a/Bai120/Bai120.vcxproj
+++ b/Bai120/Bai120.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{8e474b62-0769-474e-a243-a51a174a6804}</ProjectGuid>
     <RootNamespace>Bai120</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0120</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
