--- a/Bai123/Bai123.vcxproj
+++ b/Bai123/Bai123.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{d90c2da4-f3c8-4319-b2ef-9f1c6ff76b8a}</ProjectGuid>
     <RootNamespace>Bai123</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0123</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
