--- a/Bai125/Bai125.vcxproj
+++ b/Bai125/Bai125.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{fb2c48fa-56c9-4be1-8586-34a1717339b0}</ProjectGuid>
     <RootNamespace>Bai125</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0125</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
