--- a/Bai126/Bai126.vcxproj
+++ b/Bai126/Bai126.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{b6f730f9-fdd2-45d3-97a0-eb9f71df6569}</ProjectGuid>
     <RootNamespace>Bai126</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0126</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
