--- a/Bai127/Bai127.vcxproj
+++ b/Bai127/Bai127.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{73e17e28-9705-48bb-8dbc-a7e667ee35c9}</ProjectGuid>
     <RootNamespace>Bai127</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0127</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
