--- a/Bai128/Bai128.vcxproj
+++ b/Bai128/Bai128.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{7f98d2f3-baab-4a7a-826c-6c5806a30328}</ProjectGuid>
     <RootNamespace>Bai128</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0128</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
