--- a/Bai129/Bai129.vcxproj
+++ b/Bai129/Bai129.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{116b9b30-0d58-40ea-9458-bbcd1f6e144e}</ProjectGuid>
     <RootNamespace>Bai129</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0129</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
