--- a/Bai130/Bai130.vcxproj
+++ b/Bai130/Bai130.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{ba1493fe-791c-4dcc-ad95-e35d8460c70d}</ProjectGuid>
     <RootNamespace>Bai130</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0130</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
