--- a/Bai131/Bai131.vcxproj
+++ b/Bai131/Bai131.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{b642f6aa-59da-4b1f-828f-5d83563d5a95}</ProjectGuid>
     <RootNamespace>Bai131</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0131</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
