--- a/Bai132/Bai132.vcxproj
+++ b/Bai132/Bai132.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{08546f26-550c-4462-bc6d-33a593dbddf2}</ProjectGuid>
     <RootNamespace>Bai132</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0132</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
