--- a/Bai133/Bai133.vcxproj
+++ b/Bai133/Bai133.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{44779bff-03b1-4d82-89c0-3bdfdbf5bffd}</ProjectGuid>
     <RootNamespace>Bai133</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0133</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
