--- a/Bai135/Bai135.vcxproj
+++ b/Bai135/Bai135.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{1b317406-5212-4aa4-80c6-393613915c5f}</ProjectGuid>
     <RootNamespace>Bai135</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0135</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
