--- a/Bai136/Bai136.vcxproj
+++ b/Bai136/Bai136.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{1dcc7e1c-3eb7-4e51-b319-295a608915b8}</ProjectGuid>
     <RootNamespace>Bai136</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0136</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
