--- a/Bai137/Bai137.vcxproj
+++ b/Bai137/Bai137.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{58f5632f-c612-410a-8784-ab1dabbe3056}</ProjectGuid>
     <RootNamespace>Bai137</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0137</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
