--- a/Bai139/Bai139.vcxproj
+++ b/Bai139/Bai139.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{07ab3c76-ca75-416e-b939-449bc91d0422}</ProjectGuid>
     <RootNamespace>Bai139</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0139</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
