--- a/Bai140/Bai140.vcxproj
+++ b/Bai140/Bai140.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{d76c0d7f-b838-4972-9fa6-3cdb2e3edc58}</ProjectGuid>
     <RootNamespace>Bai140</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0140</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
