--- a/Bai141/Bai141.vcxproj
+++ b/Bai141/Bai141.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{805dd27f-c342-4e8a-9073-c5280e17e322}</ProjectGuid>
     <RootNamespace>Bai141</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Bai 0141</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
